--- a/error404.html
+++ b/error404.html
@@ -7,12 +7,12 @@
     <meta name="keyword" content="GLAM ROSE DESING, DECORACIONES, EVENTOS, BODA, BABYSHOWER, CUMPLEAÑOS, 15 AÑOS, MATRIMONIOS, BAUTIZOS,FIESTAS, REUNIONES, AGAZAJOS, BOX, DESAYUNOS SORPRESA, GLOBOS, BOUQUET DE GLOBOS, DETALLES, MOMENTOS, SORPRESA, COMPARTIR, REUNIÓN, ARREGLOS">
     <meta name="description" content="En GlassRose Desing somos un equipo de profesionales especializadas en organizar eventos sociales. Nos encargamos de la planificación, organización y coordinación total o parcial del evento. Escuchamos las necesidades de nuestros protagonistas y diseñamos un evento acorde a su presupuesto y personalidad. Realizamos nuestro trabajo con responsabilidad y mucha pasión, bajo la consigna que nos motiva de tener Todo Pensado para que el evento sea un éxito.">
     <title>Glam Rose Desing</title>
-    <link rel="stylesheet" href="../Glamrose/css/home.css">
-    <link rel="stylesheet" href="../Glamrose/css/style.css">
-    <link rel="shortcut icon" href="../Glamrose/assets/imagen/index/Logo.jpg">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./assets/imagen/index/Logo.jpg">
 </head>
 <body>
-    <img class="logo" src="../Glamrose/assets/imagen/index/404.jpg" alt="Logo" width="400px">
+    <img class="logo" src="./assets/imagen/index/404.jpg" alt="Logo" width="400px">
     <div class="error404">
         <h1>La pagina que intentas solicitar<br>no esta en el servidor (Error 404)</h1>
         <p>Prueba intentando con estos link</p>
