Se realizan actualizaciones

--- a/html/productos.html
+++ b/html/productos.html
@@ -49,24 +49,30 @@
           </div>
         </div>
       </nav>
-    <section class="productos">
-      <div>
-        <img src="../assets/imagen/productos/mejorMamá.jpg" alt="mejorMamá">
+    <section class="container">
+      <div id="container">
+        <a href="#" target="_blank">
+        <img src="../assets/imagen/productos/mejorMamá.jpg" alt="mejorMamá"></a>
       </div>
-      <div>
-        <video src="../assets/imagen/productos/videoBox.mp4" controls autoplay>Video></video>
+      <div id="container">
+        <a href="#" target="_blank">
+        <video src="../assets/imagen/productos/videoBox.mp4">Video></video>
+      </div></a>
+      <div id="container">
+        <a href="#" target="_blank">
+        <img src="../assets/imagen/productos/arregloFloral.jpg" alt="arregloFloral"></a>
       </div>
-      <div>
-        <img src="../assets/imagen/productos/arregloFloral.jpg" alt="arregloFloral">
+      <div id="container">
+        <a href="#" target="_blank">  
+        <img src="../assets/imagen/productos/box.jpg" alt="box"></a>
       </div>
-      <div>  
-        <img src="../assets/imagen/productos/box.jpg" alt="box">
+      <div id="container">
+        <a href="#" target="_blank">
+        <video src="../assets/imagen/productos/videoTaza.mp4">videoTaza></video></a>
       </div>
-      <div>
-        <video src="../assets/imagen/productos/videoTaza.mp4" controls autoplay>videoTaza></video>
-      </div>
-      <div>
-        <img src="../assets/imagen/productos/fernet.jpg" alt="">
+      <div id="container">
+        <a href="#" target="_blank">
+        <img src="../assets/imagen/productos/fernet.jpg" alt=""></a>
       </div>
       </section>
 <br>    
@@ -74,12 +80,6 @@
     <footer>
       <h5>Medios de Pagos</h5>
       <ul>
-        <div class="redesSociales">
-          <a href="https://wa.link/zphadi"> 
-            <img src="../assets/imagen/index/Whatsapp.png" alt="Whatsapp"></a>
-          <a href="https://www.instagram.com/glamrose.ar.usa/?hl=es">
-            <img src="../assets/imagen/index/instagramLogo.png" alt="instagramLogo"></a>
-        </div>
         <div class="mediosDePagos">
             <img src="../assets/imagen/index/master.png" alt="master">
             <img src="../assets/imagen/index/visa.png" alt="visa">
