--- a/html/home.html
+++ b/html/home.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/font.css">
     <link rel="shortcut icon" href="../assets/imagen/index/Logo.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,7 +84,14 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div> 
+  </div>
+
+  <div class="social-bar">
+    <a href="#" class="icon - icon-facebook" target="_blank"></a>
+    <a href="https://www.instagram.com/glamrose.ar.usa/?hl=es" class="icon - icon-instagram" target="_blank"></a>
+    <a href="https://wa.link/zphadi" class="icon - icon-whatsapp" target="_blank"></a>
+    <a href="#" class="icon - icon-whatsapp" target="_blank"></a>
+  </div>
   
   <section class="primerParrafo">
           <p> Llegaste al lugar indicado aquí encontrarás todo lo necesario para decorar cualquier celebración, de forma original, fácil, rápida y al mejor precio. Decoración de fiestas, cumpleaños infantiles, Bodas, Primera Comunión, Baby Shower o Bautizos.
@@ -97,20 +105,12 @@
   </section>
   <footer>
     <h5>Medios de Pagos</h5>
-    <ul>
-      <div class="redesSociales">
-        <a href="https://wa.link/zphadi"> 
-          <img src="../assets/imagen/index/Whatsapp.png" alt="Whatsapp"></a>
-        <a href="https://www.instagram.com/glamrose.ar.usa/?hl=es">
-          <img src="../assets/imagen/index/instagramLogo.png" alt="instagramLogo"></a>
-      </div>
       <div class="mediosDePagos">
           <img src="../assets/imagen/index/master.png" alt="master">
           <img src="../assets/imagen/index/visa.png" alt="visa">
           <img src="../assets/imagen/index/mercadoPago.png" alt="mercadoPago">
           <img src="../assets/imagen/index/efectivo.jpg" alt="efectivo">
       </div>
-    </ul>
     <ul class="footer">
         <div><p>Tacuari, Monserratt. Ciudad Autonoma de Buenos Aires. Argentina</p></div>
         <div><p>©Copyright 2021. Glam Rose.</p></div>
