--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -73,7 +73,7 @@
       <div>
         <p class="par"> Integridad, Profesionalismo, Confianza, Trabajo en Equipo, Compromiso, Pasión </p>
       </div>
-    <h2>Porqué nosostros?</h2>
+    <h2>Porqué nosotros?</h2>
       <div>
         <p class="inpar">Glam Rose es un emprendimiento dedicado a los eventos sociales  y corporativos con espacios únicos por estilo, ubicación y diseño, trabajamos en equipo con el objetivo de lograr los mejores resultados en la planificación, organización y coordinación de cada evento. Nuestra mayor satisfacción es superar la expectativas de nuestros clientes.</p>
       </div>
