--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="es-ar">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,16 +31,13 @@
             <a class="nav-link active" aria-current="page" href="../html/home.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link active" aria-current="page" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos
+            <a class="nav-link active" aria-current="page" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Desing
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="../html/eventos.html">Cumpleaños</a></li>
-              <li><a class="dropdown-item" href="#">Babys Shower</a></li>
-              <li><a class="dropdown-item" href="#">Decoraciones</a></li>
+              <li><a class="dropdown-item" href="./desing.html">Cumpleaños</a></li>
+              <li><a class="dropdown-item" href="./babyShower.html">Baby Shower</a></li>
+              <li><a class="dropdown-item" href="./boxSorpresa.html">Box Sorpresa</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../html/productos.html">Productos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../html/nosotros.html">Nosotros</a>
@@ -55,22 +53,29 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../assets/imagen/eventos/slider/baby.jpg" class="d-block w-100" alt="..." >
+        <img src="../assets/imagen/eventos/slider/cumpleañosRosa1.jpg" class="d-block w-100" alt="..." >
         <div class="carousel-caption d-none d-md-block">
           <h5></h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../assets/imagen/eventos/slider/torta.jpg" class="d-block w-100" alt="...">
+        <img src="../assets/imagen/eventos/slider/babyShower6.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5></h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../assets/imagen/eventos/slider/vicent.jpg" class="d-block w-100" alt="...">
+        <img src="../assets/imagen/eventos/slider/desingMesa.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5></h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/imagen/eventos/slider/babyShowerMafer.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5></h5>
         </div>
@@ -94,15 +99,33 @@
   </div>
   
   <section class="primerParrafo">
-    <p> Llegaste al lugar indicado aquí encontrarás todo lo necesario para decorar cualquier celebración, de forma original, fácil, rápida y al mejor precio. Decoración de fiestas, cumpleaños infantiles, Bodas, Primera Comunión, Baby Shower o Bautizos.
-    <br>
-    <br>
-    Un extenso catálogo de productos que van desde la mesa de fiesta con vajilla desechable de calidad, platos, vasos, botellitas, pajitas de papel, manteles y servilletas, hasta la decoración de fiesta de tendencia con los globos de Látex 100% Bio más espectaculares, guirnaldas y abanicos de papel, todo para tu Photocall y detalles para regalar que darán un toque personal y especial a tu fiesta.
+    <p> Llegaste al lugar indicado donde encontrarás todo lo necesario para decorar cualquier celebración, de forma original, fácil, rápida y al mejor precio. Decoración de fiestas, cumpleaños infantiles, Bodas, Primera Comunión, Baby Shower o Bautizos. Un extenso catálogo de productos que van desde la mesa de fiesta con vajilla desechable de calidad, platos, vasos, botellitas, pajitas de papel, manteles y servilletas, hasta la decoración de fiesta de tendencia con los globos de Látex 100% Bio más espectaculares, guirnaldas y abanicos de papel, todo para tu Photocall y detalles para regalar que darán un toque personal y especial a tu fiesta.
     <br>
     <br>
     Si deseas incluir un Candy Bar, estás en el sitio indicado...</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, blanditiis impedit dicta, cupiditate excepturi natus voluptatibus corporis a quaerat dolores voluptatem omnis provident rem quisquam doloribus voluptatum sit laudantium odio?</p>
   </section>
+  <section class="segundoParrafo">
+    <h2>SERVICIOS PARA EVENTOS</h2>
+    <br>
+    <div>
+    <h3>Glam Rose Desing:</h3>
+      <p>Nos encargamos de coordinar la planificación completa antes, durante y después del evento. Absolutamente todo lo necesario para lograr una fiesta exitosa.</p>
+    </div>
+    <div>
+    <h3>Glam Rose Connection:</h3>
+      <p>Sin importar en que parte del pais te encuentres, te ayudamos a planificar tu evento a la distancia. Con comunicación permanente y la tecnología adecuada, supervisamos cada detalle para que todo resulte tal y como lo soñaste.</p>
+    </div>
+    <div>
+    <h3>Glam Rose Happy Ending:</h3>
+      <p>Para quienes ya tienen todos los servicios contratados y desean contar ese día con con un equipo que coordine y supervise cada mínimo detalle.</p>
+    </div>
+    <div>
+    <h3>Glam Rose Guide:</h3>
+      <p>Asesoria integral durante todo el proceso de planificación del evento, con reuniones periódicas, en las que vamos guiando, aconsejando y recomendando ideas originales y servicios.</p>
+  </div>
+  <div></div>
+  </section>
+  <div></div>
   <footer>
     <h5>Medios de Pagos</h5>
       <div class="mediosDePagos">
