--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="es-ar">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,16 +31,13 @@
                 <a class="nav-link active" aria-current="page" href="../html/home.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link active" aria-current="page" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos
+                <a class="nav-link active" aria-current="page" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Desing
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./eventos.html">Cumpleaños</a></li>
-                  <li><a class="dropdown-item" href="#">Babys Shower</a></li>
-                  <li><a class="dropdown-item" href="#">Decoraciones</a></li>
+                  <li><a class="dropdown-item" href="./desing.html">Cumpleaños</a></li>
+                  <li><a class="dropdown-item" href="./babyShower.html">Baby Shower</a></li>
+                  <li><a class="dropdown-item" href="./boxSorpresa.html">Box Sorpresa</a></li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
